[package]
name = "colimiter"
version = "1.0.0"
authors = ["Violeta Hernández Palacios <vi.hdz.p@gmail.com>"]
description = "An inverse limiter."
edition = "2021"
homepage = "https://viiii.neocities.org/software/colimiter"
repository = "https://github.com/vihdzp/colimiter"
license = "GPL-3.0-only" # Needed for vst3-sys compatibility

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# nih-plug
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }

# Other dependencies
atomic_float = "0.1.0"
open = "4.1.0"

# Remove DLL bloat
[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[workspace]
members = ["xtask"]
